# BPDecoderPlus

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  BP_PYTORCH_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DECODER_CONFIG.md  LICENSE  Makefile  Project.toml  README.md  generate_demo_dataset.py  index.html  lecture_note.typ  mkdocs.yml  objects.inv  pyproject.toml  run_batch_demo.py  run_demo.py  test_decoder_validation.py  upg_note.typ
.claude/: settings.local.json
.github/workflows/: docs.yml  test.yml
api_reference/: index.html
benchmark/: generate_atom_loss_syndromes.jl  generate_data.jl  run_benchmarks.jl
benchmark/circuit_data/: README.md  atomloss_d3_r3_p0.0010_loss0.0000_events.01  atomloss_d3_r3_p0.0010_loss0.0000_loss.01  atomloss_d3_r3_p0.0010_loss0.0000_metadata.json  atomloss_d3_r3_p0.0010_loss0.0000_obs.01  atomloss_d3_r3_p0.0010_loss0.0100_events.01  atomloss_d3_r3_p0.0010_loss0.0100_loss.01  atomloss_d3_r3_p0.0010_loss0.0100_metadata.json  atomloss_d3_r3_p0.0010_loss0.0100_obs.01  (+70 more)
datasets/: README.md  SYNDROME_DATASET.md  sc_d11_r11_p0001_z.dem  sc_d11_r11_p0001_z.npz  sc_d11_r11_p0002_z.dem  sc_d11_r11_p0002_z.npz  sc_d11_r11_p0003_z.dem  sc_d11_r11_p0003_z.npz  sc_d11_r11_p0004_z.dem  sc_d11_r11_p0004_z.npz  sc_d11_r11_p0005_z.dem  sc_d11_r11_p0005_z.npz  sc_d11_r11_p0006_z.dem  sc_d11_r11_p0006_z.npz  sc_d11_r11_p0007_z.dem  sc_d11_r11_p0007_z.npz  sc_d11_r11_p0010_z.dem  sc_d11_r11_p0010_z.npz  sc_d11_r11_p0015_z.dem  sc_d11_r11_p0015_z.npz  sc_d11_r11_p0020_z.dem  sc_d11_r11_p0020_z.npz  sc_d11_r11_p0030_z.dem  sc_d11_r11_p0030_z.npz  sc_d11_r11_p0050_z.dem  sc_d11_r11_p0070_z.dem  sc_d11_r11_p0100_z.dem  sc_d11_r11_p0120_z.dem  sc_d11_r11_p0150_z.dem  sc_d13_r13_p0001_z.dem  sc_d13_r13_p0001_z.npz  sc_d13_r13_p0002_z.dem  sc_d13_r13_p0002_z.npz  sc_d13_r13_p0003_z.dem  sc_d13_r13_p0003_z.npz  sc_d13_r13_p0004_z.dem  sc_d13_r13_p0004_z.npz  sc_d13_r13_p0005_z.dem  sc_d13_r13_p0005_z.npz  sc_d13_r13_p0006_z.dem  (+148 more)
docs/: Getting_threshold.md  api_reference.md  approximate_tn_contraction.md  bp_osd_fix.md  getting_started.md  index.md  ldpc_comparison.md  mathematical_description.md  no_threshold_sol.md  references.bib  tanner_graph_walkthrough.md  usage_guide.md
examples/: GETTING_STARTED.md  PIPELINE_ILLUSTRATION.md  evidence_example.py  generate_tanner_visualizations.py  minimal_example.py  simple_example.py  simple_model.uai  tanner_graph_walkthrough.py
getting_started/: index.html
mathematical_description/: index.html
note/: belief_propagation_qec_plan.tex  bp.typ  bp_note.typ  dd_note.typ  dual_decomposition_survey.typ  lecture_note.typ  references.bib
notes/: bp_osd_lecture_note.typ
outputs/: improvement_benchmark.npz  tropical_approximate_benchmark.npz
python/: generate_circuit_data.py  generate_diagrams.py  requirements.txt  visualize.py
pytorch_bp/: belief_propagation.py  uai_parser.py  utils.py
results/: RESULTS.md
scripts/: analyze_threshold.py  analyze_threshold_comparison.py  analyze_tropical_threshold.py  benchmark_improvements.py  benchmark_tropical_approximate.py  generate_noisy_circuits.py  generate_threshold_datasets.py  manifest_phenomeno_threshold.py  test_tropical_fix.py  validate_dataset.py
search/: search_index.json
src/: BPDecoderPlus.jl  circuit_noise.jl  detector_graph.jl
test/: runtests.jl
tests/: __init__.py  _path.py  test_batch_bp.py  test_batch_osd.py  test_bp_basic.py  test_circuit.py  test_cli.py  test_decoder_threshold.py  test_decoder_validation.py  test_dem.py  test_integration.py  test_ldpc_comparison.py  test_osd_correctness.py  test_syndrome.py  test_uai_parser.py  test_utils.py  testcase.py
tropical_in_new/: README.md  requirements.txt
upg_research/: upg_search.typ
usage_guide/: index.html
(+63 files in other folders)
